# SarasaMonoTC-Emoji

./: .gitignore  CLAUDE.md  LICENSE  PLAN-COLRv1-greedy.md  PLAN-COLRv1.md  README.md  ROADMAP.md  build.py  check_emoji_coverage.py  config.yaml  pyproject.toml  variant-coverage.html  verify-emoji.html
.github/: colrv1-dev-notes.md  copilot-instructions.md
.github/workflows/: check-upstream.yml  release.yml  test.yml
docs/: README.md  about_SarasaMonoTCEmojiLite+Nerd_Font_icon.md  colrv1-budget-expansion-eval.md  colrv1-emoji-list.json  current-focus.md  nerd-fonts-coverage-analysis.md  nerd-fonts-variant-eval.md  nerd-lite-impl-plan.md  openmoji-coverage-eval.md  release-notes-v2.2.0.md  roadmap-history.md  upstream-versions.json  v2-sequence-implementation.md
scripts/: colrv1_budget_analysis.py  colrv1_budget_report.html
scripts/vhs/: 01-nerd-lite-hero.tape  02-nerd-lite-workflow.tape  03-nerd-lite-cjk-emoji.tape
src/: config.py  emoji_merge.py  utils.py
tests/: conftest.py  test_config.py  test_emoji_merge.py  test_font_output.py
