[project]
name = "sarasa-mono-tc-emoji"
version = "1.0.0"
description = "Sarasa Mono TC with NotoColorEmoji — color emoji support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.47.0",
    "opentype-sanitizer>=9.2.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
